Removed ribbon main menu. Added character count and event count to top of plot summary view.

--- a/StorySkeleton/MainWindow.xaml
+++ b/StorySkeleton/MainWindow.xaml
@@ -37,12 +37,7 @@
             </Ribbon.QuickAccessToolBar>
             <!-- Application Menu, located at the left-hand side (down arrow) -->
             <Ribbon.ApplicationMenu>
-                <RibbonApplicationMenu KeyTip="F">
-                    <RibbonApplicationMenuItem Header="Save" />
-                    <RibbonApplicationMenuItem Header="Open" />
-                    <RibbonApplicationMenuItem Header="Options" />
-                    <RibbonApplicationMenuItem Header="Exit" />
-                </RibbonApplicationMenu>
+                <RibbonApplicationMenu Visibility="Collapsed"/>
             </Ribbon.ApplicationMenu>
             <RibbonTab Header="Generator" KeyTip="G">
             </RibbonTab>
