--- a/StorySkeleton/Views/Characters/EditCharacterView.xaml
+++ b/StorySkeleton/Views/Characters/EditCharacterView.xaml
@@ -5,13 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StorySkeleton.Views.Characters"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="250">
+             d:DesignHeight="325" d:DesignWidth="250">
     <UserControl.Resources>
         <DataTemplate x:Key="keyTemplate">
             <Grid Margin="50,0,0,0">
                 <TextBlock Text="{Binding}" />
             </Grid>
         </DataTemplate>
+        <BitmapImage x:Key="RefreshImage" UriSource="/Images/Refresh.png"/>
     </UserControl.Resources>
     <Grid>
         <StackPanel Width="Auto">
@@ -33,6 +34,120 @@
                     </StackPanel>
                 </StackPanel>
             </GroupBox>
+            <Expander Name ="expSpecifics"
+                      Margin="30,10,0,0" 
+                      FontSize="20">
+                <Expander.Header>
+                    <Grid>
+                        <TextBlock Text=" Specifics "/>                        
+                    </Grid>
+                </Expander.Header>
+                <StackPanel>
+                    <Expander Name ="expAppearance"
+                          Margin="40,10,0,0" 
+                          FontSize="20">
+                        <Expander.Header>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text=" Appearance "/>
+                                <Button Grid.Column="1"
+                                    IsEnabled="{Binding ElementName=expAppearance, Path=IsExpanded}"
+                                    Command="{Binding Command_RandomizeAppearance}"
+                                    Width="20"
+                                    Height="20">
+                                    <Button.Background>
+                                        <ImageBrush ImageSource="{StaticResource RefreshImage}" Stretch="Fill" TileMode="None" />
+                                    </Button.Background>
+                                </Button>
+                            </Grid>
+                        </Expander.Header>
+                        <ItemsControl FontSize="18"
+                        ItemsSource="{Binding AppearanceText}"
+                        ItemTemplate="{StaticResource keyTemplate}"/>
+                    </Expander>
+                    <Expander Name ="expPersonality"
+                              Margin="40,10,0,0" 
+                              FontSize="20">
+                        <Expander.Header>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text=" Personality "/>
+                                <Button Grid.Column="1"
+                                        IsEnabled="{Binding ElementName=expPersonality, Path=IsExpanded}"
+                                        Command="{Binding Command_RandomizePersonality}"
+                                        Width="20"
+                                        Height="20">
+                                    <Button.Background>
+                                        <ImageBrush ImageSource="{StaticResource RefreshImage}" Stretch="Fill" TileMode="None" />
+                                    </Button.Background>
+                                </Button>
+                            </Grid>
+                        </Expander.Header>
+                        <ItemsControl FontSize="18"
+                            ItemsSource="{Binding PersonalityText}"
+                            ItemTemplate="{StaticResource keyTemplate}"/>
+                    </Expander>
+                    <Expander Name ="expBackground"
+                              Margin="40,10,0,0" 
+                              FontSize="20">
+                        <Expander.Header>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text=" Background "/>
+                                <Button Grid.Column="1"
+                                        IsEnabled="{Binding ElementName=expBackground, Path=IsExpanded}"
+                                        Command="{Binding Command_RandomizeBackground}"
+                                        Width="20"
+                                        Height="20">
+                                    <Button.Background>
+                                        <ImageBrush ImageSource="{StaticResource RefreshImage}" Stretch="Fill" TileMode="None" />
+                                    </Button.Background>
+                                </Button>
+                            </Grid>
+                        </Expander.Header>
+                        <ItemsControl FontSize="18"
+                            ItemsSource="{Binding BackgroundText}"
+                            ItemTemplate="{StaticResource keyTemplate}"/>
+                    </Expander>
+                    <Expander Name ="expMotivation"
+                              Margin="40,10,0,0" 
+                              FontSize="20">
+                        <Expander.Header>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text=" Motivation "/>
+                                <Button Grid.Column="1"
+                                        IsEnabled="{Binding ElementName=expMotivation, Path=IsExpanded}"
+                                        Command="{Binding Command_RandomizeMotivation}"
+                                        Width="20"
+                                        Height="20">
+                                    <Button.Background>
+                                        <ImageBrush ImageSource="{StaticResource RefreshImage}" Stretch="Fill" TileMode="None" />
+                                    </Button.Background>
+                                </Button>
+                            </Grid>
+                        </Expander.Header>
+                        <ItemsControl FontSize="18"
+                            ItemsSource="{Binding MotivationText}"
+                            ItemTemplate="{StaticResource keyTemplate}"/>
+                    </Expander>
+                </StackPanel>                    
+                <Expander.LayoutTransform>
+                    <ScaleTransform ScaleX=".6" ScaleY=".6" />
+                </Expander.LayoutTransform>
+            </Expander>
             <GroupBox Header="Relationships" 
                       Margin="10">
                 <StackPanel Margin="5">
